feat(vistas): Actualizar estilos (diseño) al consultar detalles de página

--- a/Vistas/ComentarioPrincipalUserControl.xaml
+++ b/Vistas/ComentarioPrincipalUserControl.xaml
@@ -48,8 +48,8 @@
             <Setter Property="Foreground" Value="#000000"/>
         </Style>
     </UserControl.Resources>
-    
-    <Border Background="#A6A4A4" Margin="5 10 5 5" CornerRadius="20">
+
+    <Border Background="#FFFF" BorderBrush="Black" BorderThickness="3" Margin="5 10 5 5" CornerRadius="20">
         <Grid Margin="15 10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
@@ -95,7 +95,7 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-            <Button Visibility="Visible" Grid.Row="4" Background="#000000" Foreground="#ffffff" Margin="0 5 0 0" FontFamily="{StaticResource NunitoFont}" FontSize="14"
+            <Button Visibility="Visible" Grid.Row="4" Background="#479E85" Foreground="#ffffff" BorderThickness="0" Margin="0 5 0 0" FontFamily="{StaticResource NunitoFont}" FontSize="14"
                     Click="ClicMostrarComentario" Name="btnResponder">Responder</Button>
             <Border Visibility="Collapsed" Grid.Row="4" Background="#ffffff" CornerRadius="0 0 30 30" Margin="10" Name="brdComentarioNuevo" Width="660">
                 <Grid Height="110">
