--- a/Vistas/DetallesClasePagina.xaml
+++ b/Vistas/DetallesClasePagina.xaml
@@ -19,7 +19,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type TextBox}">
-                        <Border BorderBrush="#000000" CornerRadius="20" BorderThickness="3" Background="{TemplateBinding Background}">
+                        <Border BorderBrush="#5D737E" CornerRadius="20" BorderThickness="3" Background="{TemplateBinding Background}">
                             <ScrollViewer Margin="15 10" x:Name="PART_ContentHost"/>
                         </Border>
                     </ControlTemplate>
@@ -31,7 +31,7 @@
             <Setter Property="VerticalAlignment" Value="Top"/>
             <Setter Property="FontFamily" Value="{StaticResource NunitoFont}"/>
             <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Background" Value="#ffffff"/>
+            <Setter Property="Background" Value="#D9E1E4"/>
             <Setter Property="Foreground" Value="#000000"/>
             <Setter Property="FontWeight" Value="Regular"/>
             <Setter Property="TextWrapping" Value="Wrap"/>
@@ -42,7 +42,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type TextBox}">
-                        <Border BorderBrush="#000000" CornerRadius="20" BorderThickness="3" Background="{TemplateBinding Background}">
+                        <Border BorderBrush="#5D737E" CornerRadius="20" BorderThickness="3" Background="{TemplateBinding Background}">
                             <ScrollViewer Margin="15 10" x:Name="PART_ContentHost"/>
                         </Border>
                     </ControlTemplate>
@@ -119,7 +119,7 @@
         </Style>
 
         <Style x:Key="estiloBtnBackground" TargetType="Button">
-            <Setter Property="Background" Value="#000000"/>
+            <Setter Property="Background" Value="#479E85"/>
             <Setter Property="Foreground" Value="#ffffff"/>
             <Setter Property="FontSize" Value="18"/>
             <Setter Property="FontFamily" Value="{StaticResource NunitoFont}"/>
@@ -170,7 +170,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                        <Border Background="#000000" Margin="10 10 10 5" CornerRadius="20">
+                        <Border Background="#0A122A" Margin="10 10 10 5" CornerRadius="20">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition/>
@@ -195,7 +195,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <StackPanel Background="#000000" Orientation="Horizontal">
+        <StackPanel Background="#0A122A" Orientation="Horizontal">
             <Button Style="{StaticResource estiloBtnRegresar}" Click="ClicRegresar"></Button>
             <Border Background="#ffffff" CornerRadius="20" Width="200" Margin="15">
                 <TextBlock FontFamily="{StaticResource NunitoItalicFont}" FontSize="32" FontWeight="Medium" VerticalAlignment="Center" HorizontalAlignment="Center">Clase</TextBlock>
@@ -213,7 +213,7 @@
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <Border Background="#000000" CornerRadius="20" Margin="0 15 0 25" Height="120">
+                <Border Background="#0A122A" CornerRadius="20" Margin="0 15 0 25" Height="120">
                     <TextBlock FontFamily="{StaticResource NunitoFont}" Foreground="#ffffff" FontSize="23" TextWrapping="Wrap" Margin="20 15" Name="txtBlockNombreClase"></TextBlock>
                 </Border>
                 <Grid Grid.Column="1" Margin="0 0 0 20">
@@ -222,12 +222,12 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
                     <Button Style="{StaticResource estiloBtnBackground}" Width="350" Margin="0 10 0 0" Click="ClicModificarClase">Modificar clase</Button>
-                    <Border Grid.Row="1" Background="#000000" CornerRadius="20" Height="45" Width="180" VerticalAlignment="Bottom">
+                    <Border Grid.Row="1" Background="#0A122A" CornerRadius="20" Height="45" Width="180" VerticalAlignment="Bottom">
                         <TextBlock Style="{StaticResource estiloTxtBoxCampos}">Descripción</TextBlock>
                     </Border>
                 </Grid>
 
-                <Border Grid.Row="1" Background="#ffffff" BorderBrush="#000000" BorderThickness="3" CornerRadius="30" Height="400" Name="brdVideo">
+                <Border Grid.Row="1" Background="#D9E1E4" BorderBrush="#5D737E" BorderThickness="3" CornerRadius="30" Height="400" Name="brdVideo">
                     <Grid>
                         <Border Background="#5d5d5d" Margin="20 15" Name="brdVideoBackground" Visibility="Collapsed"/>
                         <MediaElement Margin="10" Name="mdElementVideo"/>
@@ -238,21 +238,21 @@
                 </Border>
                 <TextBox Grid.Column="1" Grid.Row="1" Style="{StaticResource estiloTxtBoxInfo}" Height="400" Name="txtBlockDescripcionClase"></TextBox>
 
-                <Border Grid.Row="2" Background="#000000" CornerRadius="20" Height="45" Width="180" HorizontalAlignment="Left" Margin=" 40 10 0 20">
+                <Border Grid.Row="2" Background="#0A122A" CornerRadius="20" Height="45" Width="180" HorizontalAlignment="Left" Margin=" 40 10 0 20">
                     <TextBlock Style="{StaticResource estiloTxtBoxCampos}">Comentarios</TextBlock>
                 </Border>
 
-                <Border Grid.Row="2" Grid.Column="1" Background="#000000" CornerRadius="20" Height="45" Width="180" Margin="0 10 0 20">
+                <Border Grid.Row="2" Grid.Column="1" Background="#0A122A" CornerRadius="20" Height="45" Width="180" Margin="0 10 0 20">
                     <TextBlock Style="{StaticResource estiloTxtBoxCampos}">Documentos</TextBlock>
                 </Border>
 
-                <Border Grid.Row="3" BorderBrush="#000000" BorderThickness="3" Height="500" Margin="0 0 0 20" CornerRadius="30">
+                <Border Grid.Row="3" Background="#D9E1E4" BorderBrush="#5D737E" BorderThickness="3" Height="500" Margin="0 0 0 20" CornerRadius="30">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto"/>
                             <RowDefinition/>
                         </Grid.RowDefinitions>
-                        <Border Background="#000000" CornerRadius="30 30 0 0">
+                        <Border Background="#0A122A" CornerRadius="30 30 0 0">
                             <Grid Height="110">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition/>
@@ -262,13 +262,13 @@
                                 <Button Click="ClicEnviarComentario" Grid.Column="1" Style="{StaticResource estiloBtnEnviarW}"></Button>
                             </Grid>
                         </Border>
-                        <ListView HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" x:Name="lstViewComentarios" Grid.Row="1" Margin="10 0 10 10" BorderThickness="0" SelectionMode="Single">
+                        <ListView Background="Transparent" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" x:Name="lstViewComentarios" Grid.Row="1" Margin="10 0 10 10" BorderThickness="0" SelectionMode="Single">
                         </ListView>
                     </Grid>
                 </Border>
 
-                <Border Grid.Row="3" Grid.Column="1" BorderBrush="#000000" BorderThickness="3" Height="500" Margin="30 0 0 20" CornerRadius="30">
-                    <ListBox HorizontalContentAlignment="Stretch" ItemContainerStyle="{StaticResource estiloLstBoxDocumento}" Margin="10" Background="Transparent" BorderThickness="0" Name="lstBoxDocumentos">
+                <Border Grid.Row="3" Grid.Column="1" Background="#D9E1E4" BorderBrush="#5D737E" BorderThickness="3" Height="500" Margin="30 0 0 20" CornerRadius="30">
+                    <ListBox HorizontalContentAlignment="Stretch" ItemContainerStyle="{StaticResource estiloLstBoxDocumento}" Margin="10" Background="Transparent" BorderThickness="0" Name="lstBoxDocumentos" d:ItemsSource="{d:SampleData ItemCount=5}">
                     </ListBox>
                 </Border>
             </Grid>
