--- a/Vistas/EstadisticasCursoPagina.xaml
+++ b/Vistas/EstadisticasCursoPagina.xaml
@@ -61,7 +61,7 @@
         </Style>
         
         <Style x:Key="estiloBtnBackground" TargetType="Button">
-            <Setter Property="Background" Value="#000000"/>
+            <Setter Property="Background" Value="#479E85"/>
             <Setter Property="Foreground" Value="#ffffff"/>
             <Setter Property="FontSize" Value="18"/>
             <Setter Property="FontFamily" Value="{StaticResource NunitoFont}"/>
@@ -97,7 +97,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                        <Border BorderBrush="#000000" BorderThickness="0 0 0 3">
+                        <Border BorderBrush="#0A122A" BorderThickness="0 0 0 3">
                             <Grid Margin="5 5">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="55"/>
@@ -121,7 +121,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                        <Border BorderBrush="#000000" BorderThickness="0 0 0 3">
+                        <Border BorderBrush="#0A122A" BorderThickness="0 0 0 3">
                             <TextBlock TextWrapping="Wrap" Margin="15 10" Width="500" Text="{Binding}"></TextBlock>
                         </Border>
                     </ControlTemplate>
@@ -135,7 +135,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <StackPanel Background="#000000" Orientation="Horizontal">
+        <StackPanel Background="#0A122A" Orientation="Horizontal">
             <Button Style="{StaticResource estiloBtnRegresar}" Click="ClicRegresar"></Button>
             <Border Background="#ffffff" CornerRadius="20" Width="380" Margin="15">
                 <TextBlock FontFamily="{StaticResource NunitoItalicFont}" FontSize="32" FontWeight="Medium" VerticalAlignment="Center" HorizontalAlignment="Center">Estadísticas del curso</TextBlock>
@@ -154,11 +154,11 @@
                         <ColumnDefinition/>
                         <ColumnDefinition Width=".3*"/>
                     </Grid.ColumnDefinitions>
-                    <Border Background="#000000" CornerRadius="20" Margin="0 15 50 15" Height="120">
+                    <Border Background="#0A122A" CornerRadius="20" Margin="0 15 50 15" Height="120">
                         <TextBlock FontFamily="{StaticResource NunitoFont}" Foreground="#ffffff" FontSize="23" TextWrapping="Wrap" Margin="20 15" Name="txtBlockNombreCurso"></TextBlock>
                     </Border>
                     <Button Grid.Column="1" Style="{StaticResource estiloBtnBackground}" Margin="20 10" Height="100" Click="ClicGenerarDocumento" Name="btnGenerarDocumento">Generar un documento con las estadísticas</Button>
-                    <Border Background="#000000"  CornerRadius="20" Grid.Column="1" Height="100" Name="brdDescargaDocumento" Visibility="Collapsed">
+                    <Border Background="#0A122A"  CornerRadius="20" Grid.Column="1" Height="100" Name="brdDescargaDocumento" Visibility="Collapsed">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="190"/>
@@ -179,7 +179,7 @@
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Border Background="Black" CornerRadius="30" Width="350" Margin="0 10">
+                    <Border Background="#0A122A" CornerRadius="30" Width="350" Margin="0 10">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
@@ -192,7 +192,7 @@
                         </Grid>
                     </Border>
 
-                    <Border Grid.Column="1" Background="Black" CornerRadius="30" Width="350" Margin="0 10">
+                    <Border Grid.Column="1" Background="#0A122A" CornerRadius="30" Width="350" Margin="0 10">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
@@ -205,7 +205,7 @@
                         </Grid>
                     </Border>
 
-                    <Border Grid.Column="2" Background="Black" CornerRadius="30" Width="350" Margin="0 10">
+                    <Border Grid.Column="2" Background="#0A122A" CornerRadius="30" Width="350" Margin="0 10">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
@@ -223,7 +223,7 @@
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Border Background="#000000" CornerRadius="20" Width="200" Margin="0 10 10 5" >
+                    <Border Background="#479E85" CornerRadius="20" Width="200" Margin="0 10 10 5" >
                         <TextBlock TextWrapping="Wrap" Style="{StaticResource estiloTxtBoxCampos}" Margin="10" TextAlignment="Center">Etiquetas que coinciden:</TextBlock>
                     </Border>
                     <TextBox Grid.Column="1" Style="{StaticResource estiloTxtBoxInfo}" Height="55" Name="txtBlockEtiquetas"></TextBox>
